--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,8 +71,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 
-    //com.google.code.gson
+    //com.google.*
     implementation 'com.google.code.gson:gson:2.8.4'
+    implementation 'com.google.android.material:material:1.0.0'
 
     //com.google.dagger
     implementation 'com.google.dagger:dagger:2.22.1'
@@ -83,12 +84,20 @@ dependencies {
     implementation 'javax.annotation:javax.annotation-api:1.3.2' //javax.annotation:jsr250-api:1.0 move to javax.annotation-api:1.3.2
 
 
+    //androidx
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.0.0'
-
     implementation 'androidx.multidex:multidex:2.0.1'
 
+    //androidx.room.*
+    implementation "androidx.room:room-runtime:2.1.0-rc01"
+    annotationProcessor "androidx.room:room-compiler:2.1.0-rc01"
+    implementation "androidx.room:room-rxjava2:2.1.0-rc01"
+    implementation "androidx.room:room-testing:2.1.0-rc01"
+
+
+    //com.jakewharton.retrofit
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
